# message-relay-patterns

./: Dockerfile  Makefile  README.md  docker-compose.yaml  outbox.sql  polling_publisher.py  pyproject.toml  relay.py  requirements.txt  shared.py  transaction_log_tailing.py
db/migrations/: 001_init.sql  002_create_replication_slot.sql
db/seeds/: multiple.sql  single.sql
diagrams/: logo.drawio  polling_publisher.drawio  transaction_log_tailing.drawio
polling_publisher/: Dockerfile  docker-compose-polling-publisher.yml  migrate.sh  relay.py
transaction_log_tailing/: docker-compose-transaction-log-tailing.yml  migrate.sh  postgresql.Dockerfile  relay.py
