[project]
name = "message-relay"
version = "1.0.0"
description = "Message Relay on PostgreSQL and Kafka"
authors = [
    {name = "Ilkhomidin Bakhoraliev",email = "bakhoraliev.ilkhomidin@proton.me"}
]
license = {text = "The Unlicense"}
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "structlog (>=25.4.0,<26.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
